# COVID-19-Dashboard

./: README.md  app.py  constants.py  pyproject.toml
dashboard/: constants.py  functions.py
data/: county_demographics.csv
