[tool.poetry]
name = "COVID"
version = "0.1.0"
description = ""
authors = ["Erick <efm.physics@gmail.com>"]
readme = "README.md"
packages = [{include = "dashboard"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.24.1"
plotly = "^5.15.0"
prophet = "^1.1.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

